tdf#153446 sd fuconstruct: handle mouse-up without mouse-down

The situation where this was happening occurred when the notebookbar
had a pop-out of additional functions available. This pop-out removed
the focus from the draw window, so the mouse-down was used
to regain focus in Draw. The mouse-up just needed to be absorbed
or else the "drag the shape to create" would be changed into a select.

I checked as many "situations" as I could possibly have conceived of
after reviewing the code in this area. The ones I know I need are !bMBDown
and !IsAction(). The rest are just to try to avoid getting me into trouble.

[FuText also could benefit from this,
 but that function is much more complex,
 and so I don't dare to interfere.

 It already does BegCreateObj on a mouse-up,
 but the textbox it creates is hard to notice.]

Change-Id: I4ed2564e81d8a7ce82e7edec43e4e9acc6e97760
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154069
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>