sd/source/ui/func/fucon3d.cxx
@@ -353,6 +353,9 @@ bool FuConstruct3dObject::MouseButtonDown(const MouseEvent& rMEvt)
 
 bool FuConstruct3dObject::MouseButtonUp(const MouseEvent& rMEvt)
 {
+    if (rMEvt.IsLeft() && IsIgnoreUnexpectedMouseButtonUp())
+        return false;
+
     bool bReturn = false;
 
     if ( mpView->IsCreateObj() && rMEvt.IsLeft() )
