sd/source/ui/func/fuconcs.cxx
@@ -115,6 +115,9 @@ bool FuConstructCustomShape::MouseButtonDown(const MouseEvent& rMEvt)
 
 bool FuConstructCustomShape::MouseButtonUp(const MouseEvent& rMEvt)
 {
+    if (rMEvt.IsLeft() && IsIgnoreUnexpectedMouseButtonUp())
+        return false;
+
     bool bReturn(false);
 
     if(mpView->IsCreateObj() && rMEvt.IsLeft())
