sd/source/ui/func/fuconrec.cxx
@@ -282,6 +282,9 @@ bool FuConstructRectangle::MouseButtonDown(const MouseEvent& rMEvt)
 
 bool FuConstructRectangle::MouseButtonUp(const MouseEvent& rMEvt)
 {
+    if (rMEvt.IsLeft() && IsIgnoreUnexpectedMouseButtonUp())
+        return false;
+
     bool bReturn(false);
 
     if(mpView->IsCreateObj() && rMEvt.IsLeft())
